--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "vite-react-template-redux",
   "private": true,
   "version": "0.0.0",
+  "proxy":"http://localhost:5000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
